Correções front-end

--- a/Eduardo-Amorim-Front/src/app/app.component.html
+++ b/Eduardo-Amorim-Front/src/app/app.component.html
@@ -54,10 +54,10 @@
   <span for="valorBruto" class="control-label"> Valor Bruto : </span>
   <input type="string" class="form-control" [(ngModel)]="this.result.unidadeMonetaria +  result.resultadoBruto" disabled> 
 
-  <span for="valorBruto" class="control-label"> Valor Líquido : </span>
+  <span for="valorLiquido" class="control-label"> Valor Líquido : </span>
   <input type="string" class="form-control" [(ngModel)]="this.result.unidadeMonetaria +  result.resultadoLiquido" disabled> 
 
-  <span for="valorBruto" class="control-label"> Undidade Monetaria : </span>
+  <span for="unidadeMonetaria" class="control-label"> Undidade Monetaria : </span>
   <input type="string" class="form-control" [(ngModel)]="result.moedaReal" disabled> 
 
 </div>
